istio-components/networking/destinationrule/destinationrule-consumer.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: consumer-dr
  namespace: app
spec:
  host: consumer
  # host: consumer.app.svc.cluster.local # FQDN
  # host: consumer.app
  # host: consumer

  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN   
    tls:
      mode: ISTIO_MUTUAL

  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
